# ffi-repro

./: Main.hs  Makefile  README.md  ffi-repro.cabal
life/: life.cpp  life.h
