cabal-version:       2.2
name:                ffi-repro
version:             0.1.0.0
build-type:          Simple

executable ffi-repro
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
  include-dirs:        life
  extra-libraries:     stdc++
  cxx-sources:         life/life.cpp
  cxx-options:         -D__LIFE_MEANING__=42
